--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,18 @@ main {
     text-align: center;
     padding: 20px;
 }
+h3 {
+    color: red;
+}
+#tips-list p {
+    margin: 10px;
+    padding: 5px;
+    border-left: 2px solid red;
+    text-align: left;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
 footer {
     background-color: black;
     color: white;
